--- a/roles/query-packs/templates/create-queries.py.j2
+++ b/roles/query-packs/templates/create-queries.py.j2
@@ -1,6 +1,9 @@
 #!/bin/python
 import json
 import requests
+import sys
+reload(sys)
+sys.setdefaultencoding('utf8')
 
 with open('{{ item }}.json') as f:
     query_pack = json.load(f)
@@ -16,6 +19,22 @@ query_ids = []
 platforms = []
 intervals = []
 snapshots = []
+
+if 'platform' in query_pack.keys():
+    if query_pack['platform']=='windows':
+        label_id = [10]
+    elif query_pack['platform']=='all':
+        label_id = [6]
+    elif query_pack['platform']=='centos':
+        label_id = [9]
+    elif query_pack['platform']=='ubuntu':
+        label_id = [8]
+    elif query_pack['platform']=='darwin':
+        label_id = [7]
+    elif query_pack['platform']=='windows,darwin':
+        label_id = [7,10]
+else:
+    label_id = []
 
 for key,value in query_pack['queries'].iteritems():
 
@@ -45,7 +64,7 @@ for key,value in query_pack['queries'].iteritems():
     intervals.append(value['interval'])
 
 # Create pack
-data = '{ "name": "%s", "description": "%s", "host_ids": [], "label_ids": [] }' % ("{{ item }}", "{{ item }}")
+data = '{ "name": "%s", "description": "%s", "host_ids": [], "label_ids": %s }' % ("{{ item }}", "{{ item }}", label_id)
 response = requests.post('{{ kolide_url }}/api/v1/kolide/packs', headers=headers, data=data, verify=False)
 response_json = response.json()
 pack_id = response_json['pack']['id']
